Opened 5 years ago

Closed 5 years ago

#16003 closed bug (fixed)

wacom: hotplug after boot broken

Reported by: nephele Owned by: PreetpalKaur
Priority: high Milestone: R1/beta2
Component: Drivers/Input/Wacom Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Plugging in my wacom tablet after boot does no longer work, it can only be used if it was plugged in during boot. (this is an issue on r1beta2 branch too)

behaviour was the same on x86_gcc2 and x86_64, I bisected with the x86_gcc2 machine.

Last working was hrev54051, earliest broken was hrev54064 (of states i had available) From those i would assume that this was introduced in hrev54056

As a further note on hrev54056, the entry does not get added if the device is not connected on boot, but if it is connected the entry wont go away if the tablet is unplugged (as far as i understood that is the intended behaviour though).

Change History (10)

comment:1 by waddlesplash, 5 years ago

Owner: changed from stippi to pulkomandy
Status: newassigned

comment:2 by pulkomandy, 5 years ago

Owner: changed from pulkomandy to PreetpalKaur

Why does this get assigned to me?

comment:3 by waddlesplash, 5 years ago

That patch comes from https://review.haiku-os.org/c/haiku/+/2448.

axeld noted a different issue in that patch that should probably be resolved also:

The commit message could have been improved, but the code looks almost okay to me. The remaining _SearchDevices() call in Start() seems to be problematic. I would assume that all devices will be added twice to the list now.

comment:4 by nephele, 5 years ago

I have not seen any device get listed twice at least, I'm happy to build and test subsequent reviews for this issue, but i can't comment on gerrit, so would comment here.

comment:5 by pulkomandy, 5 years ago

but if it is connected the entry wont go away if the tablet is unplugged (as far as i understood that is the intended behaviour though).

Doesn't look right to me, if you unplug the hardware, the device should be unpublished.

comment:6 by pulkomandy, 5 years ago

Looking at this, I wonder if the MasterServerDevice is started at all now. And since we register for node monitoring in the Start method, that may never happen. So we should move the StartMonitoringDevice to the constructor, maybe? And check if the other parts of the Start() methods are useful.

comment:7 by cafeina, 5 years ago

Same bug. With beta 2 test image hrev54154_31 x86_64 (live USB), hotplugging a Wacom Intuos tablet does not do anything neither the system detects it.

These were the only thing that was reported to .../var/syslog:

KERN: usb hub 2: port 1: new device connected
KERN: wacom: add_device() - wacom detected
KERN: wacom:  ... success!
KERN: wacom: add_device() - set 'Wacom'-mode failed

I have also an issue with coldplugging the tablet from boot that triggers a unskippable KDL (present from before), but that may be related to #14589.

Last edited 5 years ago by cafeina (previous) (diff)

comment:9 by nephele, 5 years ago

Please try ​https://review.haiku-os.org/c/haiku/+/2714

LGTM, tested on 32bit, the device appears only after the tablet is plugged in and hotplug works. Still does not get removed after the device is unplugged, but that isn't what this ticket was about.

comment:10 by waddlesplash, 5 years ago

Resolution: fixed
Status: assignedclosed

Merged in hrev54213.

Note: See TracTickets for help on using tickets.