wacom: start node monitor earlier

Should fix #16003 but I don't have the hardware to test.

Change-Id: I0e6c0df7b66adf72e35e4afa272cd907427a9427
Reviewed-on: https://review.haiku-os.org/c/haiku/+/2714
Reviewed-by: waddlesplash <waddlesplash@gmail.com>